--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
+  /* border-radius: 15px; */
+  padding-top: 30px;
+  padding-right: 0px;
 }
 
 .row {
@@ -40,6 +42,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+
 }
 
 .past {
