--- a/style.css
+++ b/style.css
@@ -47,17 +47,17 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -73,3 +73,6 @@ textarea{
   transition: all .3s ease-in-out;
 }
 
+.fa-save {
+  font-size: larger;
+}
